  do not trigger a new presolving round
- added method SCIPcheckCopyLimits() which can be used to check that enough time and memory is left to run a sub-SCIP after
  subtracting time and memory used by the main-SCIP, and SCIPcopyLimits() which copies these limits accordingly and disables
  all other limits (need to be set by the plugin, if needed)

parameters:
- new parameter "branching/sumadjustweight" to adjust branching scores by adding a sum epsilon in order to keep score differences
  near zero, which are otherwise completely disregarded (they are adjusted to at least sum epsilon)
- new parameter "solvingphases/enabled" to activate adaptive behavior during the solution process; several further parameters
  in the solvingphases-section to control how to switch the parameters, and whether a restart should be performed between the phases.
- new parameter misc/referencevalue to pass a reference value for further analysis of the tree search, see also in 'features'
- new parameter sepaperspective to turn on separation of perspective cuts for indicator constraints
- new parameter sepapersplocal to decide whether local cuts can be used for perspective cuts for indicator constraints
- new parameter branching/relpscost/usesmallweightsitlim to use smaller weights for pseudo cost updates when LP
  iteration limit was hit
- new parameter class randomization
- moved permutationseed from misc to randomization
- new parameter randomization/lpseed to set the initial seed of the LP solver
- setting a value for a fixed parameter will no longer return with an error, if the new value equals the one to which the parameter is fixed
- new parameter lp/solutionpolishing to enable LP polishing only at the root LP or always
- parameters "misc/permutationseed", "misc/permuteconss", and "misc/permutevars" changed to "randomization/permutationseed",
  "randomization/permuteconss", and "randomization/permutevars"